<resources>
    <string name="app_name">Child Protect</string>
    <string name="login_et_email_hint">Enter your email</string>
    <string name="login_et_password_hint">Enter your password</string>
    <string name="Reg_et_rePass_hint">Enter your password again</string>
    <string name="login_btn_login">log in</string>
    <string name="register_btn">create</string>
    <string name="login_tv_toReg">you don\'t have an account?</string>
    <string name="login_tv_homeScreen">Log In</string>
    <string name="Reg_tv_homeScreen">sign up</string>
    <string name="Reg_tv_toLogin">you have an account?</string>
    <string name="Reg_btn_create">Create</string>
    <string name="Reg_et_userName_hint">Enter your name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">Android Studio</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="nav_header_children">Number of Children: </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_children">Children</string>
    <string name="menu_share">Share</string>
</resources>
