<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="175dp"
        android:layout_height="83dp"
        android:gravity="center"
        android:text="@string/Reg_tv_homeScreen"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <EditText
        android:id="@+id/Reg_et_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/login_et_email_password_background_shape"
        android:drawableLeft="@drawable/ic_person_"
        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/Reg_et_userName_hint"
        android:inputType="text"
        android:padding="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Reg_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/login_et_email_password_background_shape"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/login_et_email_hint"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Reg_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/login_et_email_password_background_shape"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/login_et_password_hint"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Reg_et_rePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/login_et_email_password_background_shape"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/Reg_et_rePass_hint"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/Reg_tv_toLogin"
        android:layout_width="178dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:onClick="loginScreen"
        android:text="@string/Reg_tv_toLogin"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/Create_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/login_btn_login_background_shape"
        android:text="@string/Reg_btn_create"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />
</androidx.constraintlayout.widget.ConstraintLayout>